# epd-dither

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md  TODO.md
LICENSES/: HDR_L_0.png.txt
LICENSES/assets/: HDR_L_0.png.txt
calibration/: convert.py  make_calibration_patches.py  measure.py  requirements.txt
calibration/calibration/reterminal-e1004/2026-04-30/: black_1.sp  black_2.sp  blue_1.sp  blue_2.sp  green_1.sp  green_2.sp  green_3.sp  green_4.sp  metadata.json  red_4.sp  report.html  white_3.sp  yellow_3.sp  yellow_4.sp
calibration/data/reterminal-e1004/2026-04-30/: black_3.sp  black_4.sp  blue_3.sp  blue_4.sp  red_1.sp  red_2.sp  red_3.sp  report.html  white_1.sp  white_2.sp  white_4.sp  yellow_1.sp  yellow_2.sp
docs/: decomposition.md  tetra-blend-research.md
documentation/: tetra-blend-research.md
licensing/: about.hbs  about.toml  deny.toml
scripts/: create_halftone_matrix.py  regression.sh
src/: array_util.rs  decomposer6c.rs  decomposer_bruteforce.rs  decomposer_input.rs  factory.rs  helpers.rs  image_adapter.rs  lib.rs  noise.rs  palette.rs  registry.rs  spectra6.rs
src/barycentric/: line.rs  mod.rs  octahedron.rs  tetrahedron.rs  triangle.rs
src/decompose/: gray.rs  input.rs  mod.rs  naive.rs  octahedron.rs
src/decompose/gray/: mod.rs  offset_blend.rs  pure_spread.rs
src/dither/: decomposing.rs  diffuse.rs  diffusion_matrix.rs  ditherer.rs  image_traits.rs  mod.rs  with_decomposer.rs
src/image/: adapter.rs  mod.rs  palette_image.rs
tests/: regression.sh
