[package]
name = "spectra6_dither"
version = "0.1.0"
edition = "2024"

[features]
default = ["std","with-binaries"]
std = [
	"num-traits/std",
	"nalgebra/std",
]
with-binaries = [
	"image",
]

[dependencies]
image = { version = "0.25.9", optional = true }
nalgebra = { version = "0.34.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
