[package]
name = "epd-dither"
version = "0.1.0"
edition = "2024"

[features]
default = ["with-binaries"]
with-binaries = [
	"image",
	"clap",
	"rand",
]
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.5.55", optional = true, features = ["derive"] }
image = { version = "0.25.9", optional = true }
rand = { version = "0.9.2", optional = true }
nalgebra = { version = "0.34.1", default-features = false, features = ["libm","alloc"] }
num-traits = { version = "0.2.19", default-features = false }
tinyvec = { version = "1.10.0", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
